<resources>
    <string name="app_name">CMate Project</string>
    <string name="title_activity_advertise">AdvertiseActivity</string>
    <string name="title_activity_notification_details">NotificationDetailsActivity</string>
    <string name="notificaitons">Notifications</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="From">From</string>
    <string name="Photo">Photo</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Mr.Suryaa">Mr.Suryaa</string>
    <string name="title_activity_add_entry_details">AddEntryDetailsActivity</string>
    <string name="Review">Review</string>
    <string name="Name">Name</string>
    <string name="Contacts">Contacts</string>
    <string name="Title">Title</string>
    <string name="Select_Image">Select Image(optional)</string>
    <string name="Audience">Audience</string>
    <string name="Department">Department</string>
    <string name="Price">Price</string>
    <string name="Acutal_Price">Actual Price</string>
    <string name="Details">Details</string>
    <string name="Post_A_New_Add">Post A New Add!!</string>
    <string name="Call_Me">Call Me!!</string>
    <string name="Message_Me">Message Me!!</string>
    <string name="Mail_Me">Mail Me!!</string>
    <string name="Subject">Subject</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Retype_Password">Retype Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Not_Already_Sign_In">Not Already Sign In Do </string>
    <string-array name="array">
        <item>All</item>
        <item>All</item>
    </string-array>
    <string-array name="department_spinner_content">
        <item>SELECT</item>
        <item>COMPUTER</item>
        <item>IT</item>
    </string-array>
    <string-array name="department_spinner_content_with_all">
        <item>SELECT</item>
        <item>ALL</item>
        <item>COMPUTER</item>
        <item>IT</item>
    </string-array>
    <string-array name="semester_spinner_content">
        <item>SELECT</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="semester_spinner_content_with_all">
        <item>SELECT</item>
        <item>ALL</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="division_spinner_content">
        <item>SELECT</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
    </string-array>
    <string-array name="division_spinner_content_with_all">
        <item>SELECT</item>
        <item>ALL</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
    </string-array>
    <string-array name="batch_spinner_content">
        <item>SELECT</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="batch_spinner_content_with_all">
        <item>SELECT</item>
        <item>ALL</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="audience_spinner_content">
        <item>SELECT</item>
        <item>ALL</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_add_filter">Category</string>
    <string name="title_activity_add_details">AddDetailsActivity</string>
    <string name="title_activity_ad_details">AdDetailsActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_notification_entry">NotificationEntryActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="msg_subscribed">MS</string>
    <string name="msg_token_fmt">MT</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user_entry">UserEntryActivity</string>
    <string name="Email_Address">Email Address</string>
    <string name="Mobile_No">Mobile Number</string>
    <string name="Enrollment_NO">Enrollment Number</string>
    <string name="Year">Year</string>
    <string name="Batch">Batch</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Address">Address</string>
    <string name="Division">Division</string>
    <string name="Semester">Semester</string>
    <string name="Post_A_New_Notificaiton">Post A New Notificaiton</string>
    <string name="currency">Rs.</string>
    <string name="Message">Message</string>
    <string name="title_activity_main_data_details">MainDataDetailsActivity</string>
    <string name="title_activity_main_data_home">MainDataHomeActivity</string>
    <string name="title_activity_sharing_entry">SharingEntryActivity</string>
    <string name="Upload_File">Upload File</string>
    <string name="title_activity_planout_entry">PlanoutEntryActivity</string>
    <string name="Post_A_New_Planout">Post A New Planout</string>
</resources>