<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thirdyear.project.cmateproject.sing_up_in.SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/singin_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"/>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/username_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/infoHeading"
                />

            <EditText
                android:id="@+id/username_entry_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="Enter Your Username"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/password_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/infoHeading"
                />

            <EditText
                android:id="@+id/password_entry_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="Enter Your Password"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/sign_in_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:layout_gravity="center"
        style="@style/defaultTopMargin"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Not_Already_Sign_In"
            android:textAlignment="center"
            style="@style/defaultTopMargin"
            android:id="@+id/not_already_sign_in_id"/>
        <Button
            android:id="@+id/sign_up_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up"
            android:textAlignment="center"
            style="@style/defaultTopMargin"
            android:layout_toRightOf="@id/not_already_sign_in_id"
            />
    </RelativeLayout>



</LinearLayout>
