<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thirdyear.project.cmateproject.advertise.AdDetailsActivity"
    tools:showIn="@layout/activity_ad_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/photo_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/Photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/infoHeading"
                    />

                <ImageView
                    android:id="@+id/addDetailsImageId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/name_of_add_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/infoHeading"
                    />
                <TextView
                    android:id="@+id/addDetailsNameId"
                    android:text="@string/Mr.Suryaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/infoContent"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/Mr.Suryaa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/infoContent"
                        />
                    <TextView
                        android:text="@string/Mr.Suryaa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/infoContent"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_launcher"
                        style="@style/whiteBackground"
                        android:onClick="some"/>

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_launcher"
                        style="@style/whiteBackground"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="10dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addDetailsDetailsId"
                android:text="@string/Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/infoHeading"
                />

            <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
            android:text="@string/large_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/infoContent"
            />
        </ScrollView>


        </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/contacts_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/Contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/infoHeading"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/addDetailsCallMeButtonId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@mipmap/ic_launcher"
                            style="@style/whiteBackground"/>
                        <TextView
                            android:text="@string/Call_Me"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            style="@style/infoContent"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/addDetailsMessageMeButtonId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@mipmap/ic_launcher"
                            style="@style/whiteBackground"/>
                        <TextView
                            android:text="@string/Message_Me"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            style="@style/infoContent"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/addDetailsMailMeButtonId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@mipmap/ic_launcher"
                            style="@style/whiteBackground"/>
                        <TextView
                            android:text="@string/Mail_Me"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            style="@style/infoContent"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_action_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/Review"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/infoHeading"
                    />

                <include layout="@layout/like_dislike_abuse_report" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/bottomDummyArea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            // Leave it Empty
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
