<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thirdyear.project.cmateproject.sing_up_in.SignUpActivity"
    tools:showIn="@layout/activity_sign_up"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/singin_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"/>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/username_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/infoHeading"
                />

            <EditText
                android:id="@+id/username_entry_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                style="@style/infoContent"
                android:hint="Enter Your Username"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/password_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/infoHeading"
                />

            <EditText
                android:id="@+id/password_entry_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                style="@style/infoContent"
                android:hint="Enter Your Password"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/retype_password_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/Retype_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/infoHeading"
                />

            <EditText
                android:id="@+id/retype_password_entry_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                style="@style/infoContent"
                android:hint="Retype Password Password"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/sign_in_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:layout_gravity="center"
        style="@style/defaultTopMargin"/>
</LinearLayout>
